kubernetes/monitoring-base/components/prometheus-ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: monitoring-kube-prometheus-prometheus
      port:
        number: 9090
  rules:
    - host: ~
      http:
        paths:
          - backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  number: 9090
            path: /
            pathType: Prefix
  tls:
    - hosts: []
      secretName: ingress-tls-csi
